# metarom

./: Cargo.toml  README.md  UCF_CHANGELOG.md
.github/workflows/: cargo-check.yml  signed-commit.yml
crates/gb-core/: Cargo.toml
crates/gb-core/src/: lib.rs
crates/gb-core/tests/: smoke.rs
crates/mrom-ecore-abi/: Cargo.toml
crates/mrom-ecore-abi/src/: lib.rs
crates/ucf-planner/: Cargo.toml
crates/ucf-planner/src/: cli.rs  gap.rs  lib.rs  main.rs  model.rs  plan.rs  planner.rs  ranked.rs  strategy.rs
examples/: ps2_to_pc_req.json
schemas/: capability_graph.schema.json  game_requirement.schema.json  sts_profile.schema.json  training_record.schema.json
tools/: network_crystallizer.py
tools/freemix/: README.md  freemix_engine.py
