[package]
name = "gb-core"
version = "0.6.0"
edition = "2021"
description = "MetaROM Game Boy emulator core — Phase 6 (CGB hardware, RTC, save state)"

[[bin]]
name = "letsplay"
path = "src/bin/letsplay.rs"

[[bin]]
name = "letsplay_train"
path = "src/bin/letsplay_train.rs"

[[bin]]
name = "letsplay_batch"
path = "src/bin/letsplay_batch.rs"

[lib]
name = "gb_core"
path = "src/lib.rs"

[dependencies]
